-Fixed spacing issue with error messages on different sized devices

--- a/Game Of Phones/Base.lproj/Main.storyboard
+++ b/Game Of Phones/Base.lproj/Main.storyboard
@@ -45,7 +45,7 @@
                                 </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="characterWrap" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ggF-AT-EIl">
-                                <rect key="frame" x="207" y="266" width="0.0" height="0.0"/>
+                                <rect key="frame" x="207.66666666666666" y="176" width="0.0" height="0.0"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" red="0.8315429688" green="0.01581031879" blue="0.1186854594" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
@@ -62,7 +62,7 @@
                             <constraint firstItem="LzW-pO-5rN" firstAttribute="top" secondItem="dlf-WW-cKv" secondAttribute="bottom" constant="8" id="VNo-Ka-Kc6"/>
                             <constraint firstItem="ggF-AT-EIl" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="g2c-Qz-bzm"/>
                             <constraint firstAttribute="trailingMargin" secondItem="LzW-pO-5rN" secondAttribute="trailing" constant="101" id="gMF-Dd-k0u"/>
-                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="ggF-AT-EIl" secondAttribute="bottom" constant="470" id="pOh-2q-loC"/>
+                            <constraint firstItem="ggF-AT-EIl" firstAttribute="top" secondItem="LzW-pO-5rN" secondAttribute="bottom" constant="8" id="zjg-xM-yMz"/>
                         </constraints>
                     </view>
                     <connections>
@@ -111,7 +111,7 @@
                                 </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="wordWrap" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lGu-3W-OLl">
-                                <rect key="frame" x="207" y="265" width="0.0" height="0.0"/>
+                                <rect key="frame" x="207.66666666666666" y="175" width="0.0" height="0.0"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" red="0.8315429688" green="0.01581031879" blue="0.1186854594" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
@@ -123,7 +123,7 @@
                             <constraint firstAttribute="trailingMargin" secondItem="QpB-rL-7qG" secondAttribute="trailing" constant="70" id="Ihw-Nh-JMD"/>
                             <constraint firstItem="VnT-PX-aYO" firstAttribute="top" secondItem="QpB-rL-7qG" secondAttribute="bottom" constant="8" symbolic="YES" id="OU3-wQ-5nz"/>
                             <constraint firstItem="VnT-PX-aYO" firstAttribute="top" secondItem="QpB-rL-7qG" secondAttribute="bottom" constant="8" id="QMz-sM-Ohq"/>
-                            <constraint firstItem="JQC-Zr-MbZ" firstAttribute="top" secondItem="lGu-3W-OLl" secondAttribute="bottom" constant="471" id="VNy-Np-3du"/>
+                            <constraint firstItem="lGu-3W-OLl" firstAttribute="top" secondItem="VnT-PX-aYO" secondAttribute="bottom" constant="8" id="Ydp-e7-6lR"/>
                             <constraint firstItem="lGu-3W-OLl" firstAttribute="centerX" secondItem="f97-3a-mEl" secondAttribute="centerX" id="dKp-G7-cgW"/>
                             <constraint firstItem="QpB-rL-7qG" firstAttribute="top" secondItem="o6C-S8-grX" secondAttribute="bottom" constant="8" id="f9i-ly-1mr"/>
                             <constraint firstItem="o6C-S8-grX" firstAttribute="centerX" secondItem="f97-3a-mEl" secondAttribute="centerX" id="iVw-gv-qCK"/>
@@ -250,7 +250,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ZON-9j-jFe" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="699" y="-609"/>
+            <point key="canvasLocation" x="698.55072463768124" y="-609.78260869565224"/>
         </scene>
         <!--Answer Submitted View Controller-->
         <scene sceneID="r1L-gd-8ui">
@@ -294,7 +294,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
-                        <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                        <color key="backgroundColor" red="0.14509803921568629" green="0.14117647058823529" blue="0.14117647058823529" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
                             <constraint firstItem="CKO-pf-3zQ" firstAttribute="top" secondItem="G3c-Hb-mW4" secondAttribute="bottom" constant="8" id="7XY-p1-eyb"/>
                             <constraint firstItem="8zh-Dg-fh2" firstAttribute="top" secondItem="zl4-1p-RdP" secondAttribute="bottom" constant="8" id="8ed-zv-J5L"/>
@@ -592,8 +592,8 @@
         <image name="graph.png" width="1432" height="1239"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="Z27-p7-tqU"/>
         <segue reference="QfM-jW-OHh"/>
+        <segue reference="PaN-lh-gGE"/>
         <segue reference="1X2-QV-3r8"/>
     </inferredMetricsTieBreakers>
 </document>
